--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -259,7 +259,7 @@ header{
 }
 
 .contenido-iconos div p{
-    color: rgba(255,255,255, 0.55);
+    color: rgba(255, 255, 255, 0.549);
     font-size: 15px;
 }
 
@@ -351,7 +351,7 @@ form textarea::placeholder{
 /* FOOTER */
 footer{
     background: rgba(77, 77, 92, 0.6);
-    color: #120b0baf;
+    color: rgb(0, 0, 0);
     text-align: center;
     padding: 20px 0px;
 }
